# water_fight

./: Cargo.toml  README.md  buiild.sh  index.html
docs/: index.html  leptos_start_template-2401345821fe9cc1.js  leptos_start_template-2401345821fe9cc1_bg.wasm  leptos_start_template-3f095b087cb76818.js  leptos_start_template-3f095b087cb76818_bg.wasm  leptos_start_template-416c2450ad384676.js  leptos_start_template-416c2450ad384676_bg.wasm  leptos_start_template-62f27262b653750b.js  leptos_start_template-62f27262b653750b_bg.wasm  leptos_start_template-6ff06abc5e8a2f1a.js  leptos_start_template-6ff06abc5e8a2f1a_bg.wasm  leptos_start_template-afef60b02cb3a126.js  leptos_start_template-afef60b02cb3a126_bg.wasm  leptos_start_template-c4d20b2063a7cdfe.js  leptos_start_template-c4d20b2063a7cdfe_bg.wasm  leptos_start_template-c54cdd95f92394d.js  leptos_start_template-c54cdd95f92394d_bg.wasm  wtr_fght-2c8f7355e244a899.js  wtr_fght-2c8f7355e244a899_bg.wasm  wtr_fght-b5c841e9aae35464.js  wtr_fght-b5c841e9aae35464_bg.wasm  wtr_fght-cb13b321cc5205a4.js  wtr_fght-cb13b321cc5205a4_bg.wasm
src/: main.rs
