[package]
name = "wtr_fght"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.11", features = ["nightly", "csr"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
elements = "0.24.1"
reqwasm = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
panic = "abort"
incremental = false
